manifests/apps/pdf/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pdf
  namespace: apps
spec:
  serviceName: pdf
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: pdf
  template:
    metadata:
      labels:
        app: pdf
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      restartPolicy: Always
      containers:
        - name: pdf
          image: ghcr.io/alam00000/bentopdf-simple:latest@sha256:ba67d44f07ec0d2d636c945eef1c186f71bceda3d11b1e9809d7dbfbbaaacfa4
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          livenessProbe:
            tcpSocket:
              port: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
          volumeMounts:
            - name: nginx-conf-tmp
              mountPath: /etc/nginx/conf.d
            - name: nginx-tmp
              mountPath: /etc/nginx/tmp
            - name: nginx-cache
              mountPath: /var/cache/nginx/
            - name: nginx-var
              mountPath: /var/lib/nginx/
      volumes:
        - name: nginx-conf-tmp
          emptyDir: {}
        - name: nginx-tmp
          emptyDir: {}
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-var
          emptyDir: {}
