manifests/apps/pdf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pdf
  namespace: apps
spec:
  selector:
    app: pdf
  ports:
    - name: http
      port: 8080
      targetPort: 8080
