manifests/apps/pdf/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pdf
  namespace: apps
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: cilium
  hostnames:
    - pdf.cluster.nelsondane.com
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: pdf
          port: 8080
